<resources>
    <string name="app_name">Hoper Rush</string>
    <string name="action_settings">Settings</string>
    <string name="action_ok">OK</string>
    <string name="action_cancel">CANCEL</string>
    <string name="action_signingIn">Signing In</string>
    <string name="action_signingUp">Signing Up</string>
    <string name="action_error">Sorry</string>
    <string name="action_sorry">Sorry</string>
    <string name="action_deleting">Deleting</string>
    <string name="action_success">Success</string>
    <string name="action_updating">Updating</string>
    <string name="action_processing">Processing</string>
    <string name="action_pleaseWait">Please Wait</string>
    <string name="action_loading">Loading</string>
    <string name="action_verifying">Verifying</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="action_no_internet_title">No Internet!</string>
    <string name="action_select_task_id">Select Tasker</string>
    <string name="action_select_main_category">Select Category</string>
    <string name="action_select_main_category_message">Please select category</string>
    <string name="action_select_Sub_category">Select SubCategory</string>
    <string name="action_select_sub_category_message">Please select subcategory</string>
    <string name="action_select_tasker">Sorry</string>
    <string name="action_select_tasker_message">You have already selected tasker</string>
    <string name="action_select_same_tasker_message">You have already selected this tasker</string>
    <string name="action_no_internet_swipe_down">Swipe Down To Refresh</string>
    <string name="action_no_internet_message">You are offline please check your internet connection</string>
    <string name="action_message_booking_alert">Please select a tasker</string>
    <string name="action_cancel_small">Cancel</string>
    <string name="action_retry">Retry</string>
    <string name="action_typing">typing..</string>
    <string name="action_session_expired_title">Session Expired</string>
    <string name="action_session_expired_message">Please re-login to renew your session</string>
    <string name="alert_gpsEnable">Enable GPS to locate your location</string>
    <string name="takePhoto_title">How do you want to take your photo? </string>
    <string name="takePhoto_camera">Take photo from camera</string>
    <string name="takePhoto_gallery">Choose an existing photo from gallery</string>
    <string name="ascending">Ascending</string>
    <string name="ascendingname">Name</string>
    <string name="dscending">Descending</string>
    <string name="warning">This chat room is for Hoper Rush business discussion only. Any use other than the primary purpose is prohibited.Tap for more info</string>
    <string name="warning1">This chat room is for Hoper Rush business discussion only. Any use other than the primary purpose is prohibited. Especially sending adverts, sexual content or abuse of the other party right. Admin goes through all chat content and attachments at all time. Defaulter are punishable under Indian Law.</string>
    <string name="jobfare_jobid_label">Job Id :</string>
    <string name="jobfare_header_label">JOB FARE</string>
    <string name="payment_no_jobfare">You dnt have jobfare</string>
    <string name="no_inetnet_whoops_label">Whoops! Check Connection</string>
    <string name="no_inetnet_label">you are offline.please check your mobile data or Wifi connection</string>
    <string name="title_activity_payment_new">PaymentNew</string>
    <string name="title_activity_card_list__details">Card_list_Details</string>
    <string name="estimate_price_label_search">Enter Place to Search</string>
    <string name="estimate_price_label_place_notAvailable">No Search Found</string>
    <string name="estimate_price_label_not_found">No Rate Available</string>
    <string name="signIn_signUp_label_welcome">WELCOME</string>
    <string name="signIn_signUp_label_facebook">LOG IN WITH FACEBOOK</string>
    <string name="signIn_signUp_label_signup">REGISTER</string>
    <string name="signIn_signUp_label_signin">SIGN IN</string>
    <string name="Agree">Please agree the </string>
    <string name="terms_conditions"> Terms&amp;Conditions</string>
    <string name="privacy_policy_text">Privacy Policy</string>
    <string name="about_text">AboutUs</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="payments_disabled_text">All Payments were disabled by the Admin.</string>
    <string name="xmpp_notification_label_accept">Accepted Job</string>
    <string name="xmpp_notification_label_reAssign">Sorry</string>
    <string name="xmpp_notification_label_startOff">Start Off</string>
    <string name="xmpp_notification_label_arrived">Arrived</string>
    <string name="xmpp_notification_label_startoff">Start Off</string>
    <string name="xmpp_notification_label_started">Job Started</string>
    <string name="xmpp_notification_label_completed">Completed</string>
    <string name="xmpp_notification_label_declined">Declined</string>
    <string name="xmpp_notification_payment_request">Payment Request</string>
    <string name="job_cancel">Unfortunatly this provider will not continue your job. we will arrange another provider shortly.</string>
    <string name="xmpp_notification_label_payment_completed">Payment Completed</string>
    <string name="admin_notification">Admin Notification</string>
    <string name="login_label_Email">Phone or Email</string>
    <string name="login_label_password">Password</string>
    <string name="login_label_login">SIGN IN</string>
    <string name="login_label_forgot_password">Forgot password?</string>
    <string name="login_label_login1">SIGN IN</string>
    <string name="login_label_alert_invalid_email">Email address is invalid</string>
    <string name="login_label_alert_password">Password can\'t be empty</string>
    <string name="login_label_alert_signIn_failed">Sign In Failed</string>
    <string name="server_lable_header">Sorry!</string>
    <string name="server_ok_lable_header">Ok</string>
    <string name="arrived_alert_content1">Unable to contact tasker.please try again after sometime</string>
    <string name="aboutus_lable_header_textview">ABOUT US</string>
    <string name="terms_conditions_text">Terms &amp; Conditions</string>
    <string name="aboutus_lable_poweredby_textview">POWERED BY :</string>
    <string name="aboutus_lable_company_textview">Hoper Rush</string>
    <string name="aboutus_lable_version_code_textview">VERSION 1.0</string>
    <string name="aboutus_lable_moreinfo_textview">More Info</string>
    <string name="aboutus_lable_aboutus_description_textview">Hoper Rush - Refer Website..</string>
    <string name="action_pleasewait">Please Wait...</string>
    <string name="register_label">REGISTER</string>
    <string name="register_label1">Not with one of us?</string>
    <string name="register_label_email_hint">Email Address</string>
    <string name="register_firstname">First Name</string>
    <string name="register_lastname">Last Name</string>
    <string name="register_label_pwd_hint">Password</string>
    <string name="register_label_confirm_pwd_hint">Confirm Password</string>
    <string name="register_label_username_hint">UserName</string>
    <string name="register_label_phone_hint">Phone Number</string>
    <string name="register_label_code_hint">Code</string>
    <string name="register_label_referral_hint">Referral Code</string>
    <string name="register_label_register">REGISTER</string>
    <string name="register_label_alert_username">UserName can\'t be empty</string>
    <string name="register_label_alert_username_lowercase">UserName allowed only lower case letters</string>
    <string name="register_label_alert_password">Password must be at least 6 characters, and must include at least one lower case letter, and one numeric digit.</string>
    <string name="password_alert">Enter password</string>
    <string name="register_label_alert_email">Email address is invalid</string>
    <string name="register_label_alert_firstname">FirstName can\'t be empty</string>
    <string name="register_label_alert_lastname">LastName can\'t be empty</string>
    <string name="confirm_password_alert">Password not match</string>
    <string name="alert_email">Enter email address</string>
    <string name="register_label_alert_phoneNo">Must be a valid phone number</string>
    <string name="alert_phonenumber">Enter phone number</string>
    <string name="register_label_alert_country_code">Enter country code</string>
    <string name="register_label_referral_schema">Referral Schema!</string>
    <string name="register_label_referral_ok">OK</string>
    <string name="register_label_referral_schema_content1">Have you received a referral code from a friend or contact? Enter it in this form, to get free credits to your Hoper Rush Wallet.</string>
    <string name="register_label_referral_schema_content2">Note:The referral code is a unique code from each user and can only be used one time as a new Hoper Rush Customer.</string>
    <string name="login_label_alert_register_failed">Register Failed</string>
    <string name="terms_text">Please agree the Terms&amp;Conditions</string>
    <string name="otp_label_verification">OTP Verification</string>
    <string name="otp_label_enter_otp">Enter OTP</string>
    <string name="otp_label_entered_otp">Entered OTP</string>
    <string name="otp_label_send">SEND</string>
    <string name="action_otp">Verifying</string>
    <string name="otp_label_alert_otp">OTP can\'t be empty</string>
    <string name="otp_label_alert_invalid">Invalid OTP</string>
    <string name="otp_label_alert_verification_failed">OTP Verification Failed</string>
    <string name="forgot_password_email_label_title">FORGOT PASSWORD</string>
    <string name="forgot_password_email_label_enter_email">Email Address or Phone Number</string>
    <string name="forgot_password_email_label_send_email">RESET PASSWORD</string>
    <string name="forgot_password_email_label_enter_valid_email">Email address is invalid</string>
    <string name="forgot_password_email_label_success">Verification code has been sent to your registered mobile number</string>
    <string name="reset_password_label_title">RESET PASSWORD</string>
    <string name="reset_password_label_email">Phone or Email</string>
    <string name="reset_password_label_enter_new_password">New Password</string>
    <string name="reset_password_label_show_password_text">Show Password</string>
    <string name="reset_password_email_label_enter_valid_email">Enter valid email</string>
    <string name="reset_password_email_label_enter_valid_password">Password can\'t be empty</string>
    <string name="city_selection_label_title">SELECT YOUR CITY</string>
    <string name="navigation_label_home">HOME</string>
    <string name="navigation_label_myOrders">MY ORDERS</string>
    <string name="navigation_label_money">MY MONEY</string>
    <string name="plumbalMoney_label_textView">Cashless,hassle-free tasks &amp; more... </string>
    <string name="plumbalMoney_label_your_current_balance_textView">Your current balance</string>
    <string name="plumbalMoney_label_rechargeMoney_editText">Enter amount between $10 - $100</string>
    <string name="plumbalMoney_label_add_plumbalMoney">ADD WALLET MONEY</string>
    <string name="walletMoney_label_add_psgiMoney">PSGiPayment</string>
    <string name="appointment_label_your_instruction">Enter your special instruction</string>
    <string name="plumbal_money_add_money_button_paypal">Paypal</string>
    <string name="time">Booking Time  :  </string>
    <string name="date">Booking Date  :  </string>
    <string name="taskername">Tasker Name  :  </string>
    <string name="confirm_booking">Confirm Booking </string>
    <string name="cancel_booking">Cancel Booking </string>
    <string name="header_confirm">Job Confirmation </string>
</resources>