<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/appointment_page_cardView_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardBackgroundColor="#f7fbfc"
         app:cardCornerRadius="6dp"
        card_view:cardUseCompatPadding="true"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="4dp"
        card_view:contentPadding="10dp"
       >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/booking_alert">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/header_layout"
                android:layout_marginTop="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/header_confirm"
                    android:textColor="@color/appmain_color"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:layout_marginLeft="10dp"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/header"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_below="@+id/header"
                    android:background="#9b9b99"
                    android:id="@+id/view"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"></View>
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/taskername_layout"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/header_layout">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/taskername"
                    android:textColor="#9b9b99"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:layout_marginLeft="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Taskername"
                    android:textSize="16sp"
                    android:textColor="#9b9b99"
                    android:layout_marginLeft="15dp"
                    android:id="@+id/tasker_name"
                    />

            </LinearLayout>
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/time_layout"
               android:layout_below="@+id/taskername_layout"
               android:layout_marginTop="20dp">
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/time"
                   android:textColor="#9b9b99"
                   android:textStyle="bold"
                   android:textSize="15sp"
                   android:layout_marginLeft="10dp"/>
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="Time"
                   android:textSize="16sp"
                   android:textColor="#9b9b99"
                   android:layout_marginLeft="15dp"
                   android:id="@+id/booking_time"
                   />

           </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/time_layout"
                android:layout_marginTop="20dp"
                android:id="@+id/date_layout">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textColor="#9b9b99"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:layout_marginLeft="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Date"
                    android:textSize="16sp"
                    android:textColor="#9b9b99"
                    android:layout_marginLeft="15dp"
                    android:id="@+id/booking_date"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/instruction_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/date_layout"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/chatprofileview">
                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/booking_page_instruction_editText"
                    android:layout_width="fill_parent"
                    android:layout_height="110dp"
                    android:background="@drawable/edittext_background"
                    android:gravity="top|left"
                    android:hint="@string/appointment_label_your_instruction"
                    android:inputType="textMultiLine"
                    android:lines="30"
                    android:minLines="6"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="5dp"
                    android:textCursorDrawable="@xml/edittext_cursor_color_grey"
                    android:textSize="14sp"
                    app:met_accentTypeface="fonts/Roboto-Regular.ttf"
                    app:met_autoValidate="true"
                    app:met_baseColor="#00000000"
                    app:met_clearButton="false"
                    app:met_errorColor="#00000000"
                    app:met_floatingLabel="none"
                    app:met_floatingLabelTextColor="#00000000"
                    app:met_hideUnderline="true"
                    app:met_iconPadding="0dp"
                    app:met_primaryColor="#00000000"
                    app:met_textColor="#9e9e9e"
                    app:met_textColorHint="#7c7b7b"
                    app:met_typeface="fonts/Roboto-Regular.ttf"
                    app:met_underlineColor="#00000000"
                    />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/instruction_layout"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/booking_confirm_layout_map"
                android:layout_marginBottom="10dp">


                <View
                    android:layout_width="1px"
                    android:layout_height="19dp"
                    android:layout_below="@+id/view1"
                    android:background="#FFF"
                    android:id="@+id/view2"
                    android:layout_centerInParent="true"
                    ></View>
               <RelativeLayout
                   android:layout_width="match_parent"
                   android:layout_height="40dp"
                   android:layout_toLeftOf="@+id/view2"
                   android:layout_centerInParent="true"
                   android:id="@+id/confirm_book" >
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/confirm_booking"
                       android:layout_centerInParent="true"
                       android:textSize="14sp"
                       android:textColor="#FFF"
                       android:textStyle="bold"/>
               </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_toRightOf="@+id/view2"
                    android:layout_centerInParent="true"
                    android:id="@+id/cancel_book">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cancel_booking"
                        android:layout_centerInParent="true"
                        android:textSize="14sp"
                        android:textColor="#FFF"
                        android:textStyle="bold"/>
                </RelativeLayout>

            </RelativeLayout>
        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>